--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1>Hello!</h1>
+<h1>Hello! (an edit here as well)</h1>
 
-<p>This is my first website.</p>
+<p>This is my first website (along with a tiny edit here).</p>
 
 </body>
 </html>
